2006-06-14    <mschimek@users.sf.net>

	* plugins/deinterlace/test/md5sums-sse3: Removed VideoBob,
	  VideoWeave, TwoFrame, Greedy and Greedy2Frame. No SSE3 optimized
	  version exists of these methods.

	* libtv/copy_image.c (tv_copy_image): Skipped some parameter checks
	  if src == dst.
	* test/convert_image.c: Didn't fully check HM12
	  conversions. Accelerated failure checks.
	* libtv/yuv2yuv.c (_tv_hm12_to_yuv420): Fixed bytes per line bug.

	* src/tveng25.c: Moved get/set format test code into a separate layer
	  to follow the normal execution path.
	(set_capture_format): Checked the pixel format returned by ivtv
	  driver before fixing it, which always failed.

	* src/capture.c (change_capture_format): When a particular size was
	  requested the function succeeded with wrong width or height.

	* configure.in: Bumped version to 0.10cvs7.

2006-06-13    <mschimek@users.sf.net>

	* Prerelease 0.10cvs6.

2006-06-11    <mschimek@users.sf.net>

	* src/tveng.c (tveng_attach_device): Must not access xv_port_id
	  field when Xv support not compiled in.

	* configure.in: Replaced lrint() link check by compile
	  and link check. CFLAGS changes have no effect after AC_PROG_CC,
	  added AC_GNU_SOURCE instead of -D_GNU_SOURCE.
	* src/zvbi.c: Undefined lrint() because config.h was not
	  included.

2006-06-07    <mschimek@users.sf.net>

	* configure.in: Replaced lrint() link check by compile check
	  because it's a macro in glibc.

	* src/main.c (MAIN), src/globals.c: 
	* src/audio.c (mixer_setup, devices_audio_apply, startup_audio): 
	* src/audio.c (loopback_start): Added preliminary support for ivtv
	  audio device.

	* src/tveng25.c (read_frame), src/tveng1.c (read_frame): Assert
	  tv_copy_image() success.

	* libtv/copy_image.c (tv_copy_image):
	* test/copy_image.c (test): HM12 not supported yet, no complaints
	  please.

	* test/convert_image.c (all_formats): Fixed the HM12 check.

	* plugins/deinterlace/DI_GreedyH/DI_GreedyH.c: SSE version was not