@@ -27,5 +27,5 @@ StartupNotify=true
 Categories=GNOME;Application;Multimedia;AudioVideo;Video;TV;
 X-GNOME-Bugzilla-Bugzilla=GNOME
 X-GNOME-Bugzilla-Product=Zapping
-X-GNOME-Bugzilla-Version=0.10cvs6
+X-GNOME-Bugzilla-Version=0.10cvs7
 X-GNOME-Bugzilla-Component=general
